--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">IH Onboarding</string>
+    <string name="sample">Sample</string>
+    <string name="title_login">TimeRomanNews.</string>
+    <string name="btn_login">Login</string>
+    <string name="label_email">Email</string>
+    <string name="label_password">Password</string>
 </resources>
