--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="btn_login">Login</string>
     <string name="label_email">Email</string>
     <string name="label_password">Password</string>
+    <string name="err_blank_email_password">Email and password field are required</string>
 </resources>
