--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="label_email">Email</string>
     <string name="label_password">Password</string>
     <string name="err_blank_email_password">Email and password field are required</string>
+    <string name="text_ok">Ok</string>
+    <string name="text_error">Error</string>
 </resources>
