--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="err_blank_email_password">Email and password field are required</string>
     <string name="text_ok">Ok</string>
     <string name="text_error">Error</string>
-    <string name="my_name">Novita</string>
-    <string name="my_motto">It\'s never too old to learn</string>
-    <string name="my_url">https://www.linkedin.com/in/novitaguok/</string>
+    <string name="my_name">Prapto Prawirodirjo</string>
+    <string name="my_motto">5 terlalu banyak, 10 kurang, lorem ipsum dolor si jamet</string>
+    <string name="my_url">https://icehousecorp.com</string>
     <string name="card_title">John Stones Reborn When City Get Rid of Manchester United</string>
     <string name="card_time">7 Jan 21</string>
     <string name="desc_views">views</string>
